Gave the landing page photographs their own ID

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/construction_pipelines.jpg)" alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
+		<div class="background" id="landingPagePhotos" style="background-image:url(assets/img/backgrounds/construction_pipelines.jpg)" alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
 	</section>
 
 	<!-- ENTERPRISE -->
@@ -310,7 +310,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" height="700" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos"  height="700" width="1000" src="assets/img/backgrounds/tunnel.jpg" alt="Foto av besiktningsman vid inspektion av tunnelbanesystem." />
 							</li>
 						</ul>
 					</div>
@@ -329,7 +329,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -433,7 +433,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
 							</li>
 						</ul>
 					</div>
@@ -451,7 +451,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
