the first landing page slide now places the project slider under the intro text

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				<div class="wrap">
 
 					<div class="fix-12-12">
-						<ul class="flex reverse">
+						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h3>Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h3>
@@ -260,7 +260,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1 class="">Entreprenadbesiktning för nyproduktion och ROT</h1>
+								<h1>Entreprenadbesiktning för nyproduktion och ROT</h1>
 								<p>
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
@@ -270,9 +270,6 @@
 								<p>
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
-								<!-- <a href="/tjanster/entreprenad/#entreprenad-offer">
-									<p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
-								</a> -->
 								<a href="tjanster/entreprenad/">
 									<p class="common-Link">Läs mer om våra tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
@@ -336,9 +333,6 @@
 								<p>
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
-								<!-- <a href="/tjanster/brf/#brf-offer">
-									<p class="common-Link">Mer om vårt erbjudande<i class="icono-arrow2-left"></i></p>
-								</a> -->
 								<a href="tjanster/brf/">
 									<p class="common-Link">Läs mer om våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
@@ -393,9 +387,6 @@
 								<h1 class="">Besiktningstjänster för privatpersoner</h1>
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-								<!-- <a href="/tjanster/privat/#privat-offer">
-									<p class="common-Link">Mer om besiktning för småhus mm<i class="icono-arrow2-left"></i></p>
-								</a> -->
 								<a href="tjanster/privat/">
 									<p class="common-Link">Läs mer om våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
