services margin bottom fix

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -196,7 +196,7 @@
 	<section class="slide whiteSlide autoHeight">
 
 	</section>
-	<section class="slide whiteSlide autoHeight margin-bottom-5" id="entreprenad-services">
+	<section class="slide whiteSlide autoHeight" id="entreprenad-services">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 left margin-top-1 margin-bottom-2">
@@ -236,7 +236,7 @@
 		</div>
 
 	</section>
-	<section class="slide whiteSlide autoHeight">
+	<section class="slide whiteSlide autoHeight margin-bottom-10">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 left">
