According to research we need to place items in a regular list instead of the zig-zag design

--- a/index.html
+++ b/index.html
@@ -324,10 +324,7 @@
 				<div class="wrap">
 
 					<div class="fix-12-12">
-						<ul class="flex reverse flex-phone">
-							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
-							</li>
+						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
 								<p>
@@ -365,7 +362,9 @@
 									})()
 								</script>
 							</li>
-
+							<li class="col-6-12 left fromRight">
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
+							</li>
 						</ul>
 					</div>
 
@@ -440,17 +439,15 @@
 				<div class="wrap">
 
 					<div class="fix-12-12">
-						<ul class="flex reverse flex-phone">
-							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
-							</li>
+						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1 class="">Vår digitala besiktningsprocess</h1>
+								<h1>Vår digitala besiktningsprocess</h1>
 								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
 								<p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								<a class="popupTrigger" data-popup-id="ispect-details">
 									<p class="margin-bottom-1 common-Link">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
 								</a>
+								<br>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 								<script>
 									(function() {
@@ -479,7 +476,9 @@
 									})()
 								</script>
 							</li>
-
+							<li class="col-6-12 left fromRight">
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+							</li>
 						</ul>
 					</div>
 
@@ -489,14 +488,17 @@
 	</section>
 
 	<!-- BIG CTAS-->
-	<p class="center small text-blueGrey">Läs vårt nyhetsbrev!</p>
-	<div class="container-lg" id="newsletter">
-		<div class="center-m-down center">
-					<a data-popup-id="letters" class="popupTrigger common-Link globalFooterCard soft-shadow white">
-						<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
-					</a>
+	<section class="slide whiteSlide" id="newsletter-slide" style="background-color: #fbfbfb;">
+		<div class="padding-5">
+			<p class="center small text-blueGrey">Läs vårt nyhetsbrev!</p>
+			<div class="center-m-down center">
+						<a data-popup-id="letters" class="popupTrigger common-Link globalFooterCard soft-shadow white">
+							<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
+						</a>
+			</div>
 		</div>
-	</div>
+	</section>
+
 <!-- Footer -->
 <section class="slide customFooter autoHeight">
   <div class="content">
