KA-Kontrollansvarig fixes

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -395,11 +395,15 @@
 									</li>
 								</ul>
 							</div>
-							<h3>Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
+							<h3>KA_Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 							<div>
 								<ul>
 									<li class="col-5-12">
-										<p class="bold margin-bottom-1">Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en Kontrollansvarig (KA). En KA kan även behövas vid rivning eller markarbeten</p>
+										<p class="bold margin-bottom-1">
+											Vid nyproduktion, om- och tillbyggnad där det behövs bygglov krävs en KA-Kontrollansvarig.
+											<br>
+											En KA-Kontrollansvarig kan även behövas vid rivning eller markarbeten
+										</p>
 										<p>
 											Den Kontrollansvarige ska kontrollera att de myndighetskrav och bygg- och branschregler som ställs på arbetena uppfylls. Dessa krav kan exempelvis avse ventilation, energianvändning, fuktsäkerhet, tillgänglighet samt att de för arbetena gällande säkerhetsreglerna
 											uppfylls.
@@ -410,8 +414,6 @@
 										</p>
 										<p>
 											Tjänsten kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster.
-											<br>
-											<br> Pris offereras separat.
 										</p>
 										<p class="bold margin-bottom-1">Ur Boverkets information om Kontrollansvarig:</p>
 										<p>Du som ska bygga, riva eller utföra markarbeten kan behöva en kontrollansvarig, KA, för ditt projekt. Du behöver oftast inte en kontrollansvarig om du bara ska göra små ändringar av till exempel ett en- och tvåbostadshus. När du utför en åtgärd
