--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="se">
 
 <head>
 	<title>Besiktningsman.se | Sveriges ledande entreprenadbesiktningsföretag</title>
