iPad fixes for the landing page photos

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" id="landingPagePhotos" style="background-image:url(assets/img/backgrounds/construction_pipelines.jpg)" alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/construction_pipelines.jpg)" alt="Bakgrundsbild av tre hus i Hallstatt, Österrike. Foto av Daniel Frank på Unsplash"></div>
 	</section>
 
 	<!-- ENTERPRISE -->
