Added the current newsletter link to the landing page

--- a/index.html
+++ b/index.html
@@ -711,6 +711,7 @@
 				<div class="wrap spaces">
 					<div class="fix-4-12 margin-top-6">
 	          <div class="pad shadow selected popupContent">
+
 								<div class="absolute">
 									<h3 class="center">BYGGINTELLIGENS</h3>
 									<p class="small center">Ett nyhetsbrev från Besiktningsman.se</p>
@@ -720,21 +721,15 @@
 								<div class="dialogContent">
 									<ul class="text-center left">
 										<li>
-											<p class="micro text-blueGrey margin-0 padding-0">2017-02-20</p>
-											<a href="#" target="_blank" class="text-blue bold small">Hur iSpect genererar avkastning i projekten</a>
-										</li>
-										<br>
-										<li>
-											<p class="micro text-blueGrey margin-0 padding-0">2017-05-20</p>
-											<a href="#" target="_blank" class="text-blue bold small">Besiktningsmannens ansvar</a>
-										</li>
-										<br>
-										<li>
-											<p class="micro text-blueGrey margin-0 padding-0">2018-01-20</p>
-											<a href="#" target="_blank" class="text-blue bold small">Byggsveriges framtid 2018</a>
+											<p class="micro text-blueGrey margin-0 padding-0">2017-12-13</p>
+											<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true"
+													target="_blank" class="text-blue bold small">
+													Nu samlar vi kraft för 2018!
+											</a>
 										</li>
 									</ul>
 								</div>
+								
 	          </div>
 	        </div>
 				</div>
