added newsletter link to news-page

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -147,8 +147,9 @@
 								Nyhetsbrev
 							</h3>
 							<div class="margin-left-2">
-									<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">länk till nyhetsbrev #1</p></a>
-									<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #2</p></a>
+								<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Nu samlar vi kraft för 2018!</p>
+								</a>
 							</div>
 						</div>
 					</div>
