--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -474,7 +474,7 @@
 							</li>
 							<li class="col-6-12 ae-5">
 								<h3 class="margin-bottom-1">Följ oss</h3>
-								<!-- <a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a> -->
+								<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
 								<a target="_blank" href="https://twitter.com/BjornSelling">
 									<p class="text-blue bold">Twitter</p>
 								</a>
