--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -239,7 +239,6 @@
 											<br>
 											<br> Pris offereras separat.
 										</p>
-
 										<p class="bold margin-bottom-1">Enligt AB04 och ABT 06 kap 7</p>
 										<p>
 											• ”Besiktning enligt §§1-5 i detta kapitel 7 verkställs av en därtill lämpad person som beställaren utser. Om parterna kommer överens om det kan besiktningen i stället verkställas av en person som de gemensamt utser. Om part underlåter att medverka till
@@ -251,6 +250,7 @@
 											handledning för entreprenadbesiktning</p>
 										<p>• ”Slutbesiktningen är den för båda parter viktigaste besiktningen. Det gäller nämligen här att pröva och avgöra frågan om godkännande av entreprenaden, vilket i sin tur har många betydelsefulla konsekvenser för parterna. Det bör betonas, att
 											– om inte parterna kommer överens om annat – slutbesiktning ska ske först vid kontraktstidens utgång eller om entreprenaden färdigställas senare, utan dröjsmål efter det att entreprenören anmält entreprenaden färdigställd.”</p>
+										<a href="../../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en slutbesiktning innebär</p></a>
 									</li>
 								</ul>
 							</div>
@@ -347,6 +347,7 @@
 											<br>
 											<br> Av beställaren skriftligt påtalat fel enligt kap7§12 ska inte heller tas upp, utan dessa ska behandlas som särskild besiktning om part påkallar sådan. Inget hindrar dock att en förrättning omfattar både efterbesiktning och särskild besiktning,
 											om detta angivits i kallelsen.”</p>
+											<a href="../../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en efterbesiktning innebär</p></a>
 									</li>
 								</ul>
 							</div>
@@ -377,6 +378,7 @@
 											<br> ”Särskild besiktning enligt punkt 1 ovan avser sådana av beställaren påtalade fel efter förhållanden som förelegat vid slutbesiktning men som då inte tagits upp på grund av att de inte märkts, eller att besiktningsmannen förbisett felet.
 											<br> Särskild besiktning enligt punkt 2 ovan avser dels fel som framträtt under garantitiden och där garantiansvar eventuellt föreligger, och dels sådana fel som framträtt efter garantitidens utgång men inom den 10-åriga ansvarstiden.”
 										</p>
+										<a href="../../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en särskild besiktning innebär</p></a>
 									</li>
 								</ul>
 							</div>
