Fixing navigation tags on each page

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -73,7 +73,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -83,7 +83,7 @@
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 				<h2 class="bold small text-blueGrey">Navigation</h2>
 				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
