--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -70,7 +70,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -80,7 +80,7 @@
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 				<h2 class="bold small text-blueGrey">Navigation</h2>
 				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
@@ -257,10 +257,24 @@
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Rickard Björk</h3>
+										<h3 class="">Mathias Wussow</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:rickard@besiktningsman.se">
-											<p class="micro bold text-blue">rickard@besiktningsman.se</p>
+										<a href="mailto:mathias@besiktningsman.se">
+											<p class="micro bold text-blue">mathias@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3 class="">Tom Maurell</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:tom@besiktningsman.se">
+											<p class="micro bold text-blue">tom@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3 class="">John Eriksson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:john@besiktningsman.se">
+											<p class="micro bold text-blue">john@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
@@ -287,7 +301,7 @@
 									<li class="col-3-12">
 										<h3 class="">Lasse Grandahl</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:rickard@besiktningsman.se">
+										<a href="mailto:lasse@besiktningsman.se">
 											<p class="micro bold text-blue">lasse@besiktningsman.se</p>
 										</a>
 									</li>
