Compressed the press package

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -71,7 +71,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -80,7 +80,7 @@
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
 				<h2 class="bold small text-blueGrey">Navigation</h2>
 				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
@@ -133,16 +133,16 @@
 								<p class="micro bold">Magnus Janson</p>
 								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@besiktningsman.se</p></a>
 								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
-								<a href="#"><p class="micro bold text-blue">Foton</p></a>
-								<a href="../assets/svg/bm_loggor_svg.zip"><p class="micro bold text-blue">Logga</p></a>
+								<a href="../assets/press/bm_press.zip"><p class="micro bold text-blue">Ladda ner presspaketet</p></a>
 							</div>
-							<h3 class="pad-header margin-0" style="padding-left: 20px;">
+							<!-- no active PM links yet -->
+							<!-- <h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Pressmeddelanden
 							</h3>
 							<div class="margin-left-2">
 								<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">Länk PM1</p></a>
 								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
-							</div>
+							</div> -->
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Nyhetsbrev
 							</h3>
