--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
               <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p></a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
-            <li class="col-6-12 ae-5">
+            <li class="col-6-12">
               <h3 class="margin-bottom-1">Följ oss</h3>
 							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
@@ -524,11 +524,13 @@
 							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
             </li>
           </ul>
+
         </div>
 
       </div>
     </div>
   </div>
+	<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="sebastianselling.com" tabindex="_blank">Design av Sebastian Selling</a></p>
 </section>
 
 
