--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -351,6 +351,7 @@
       </div>
     </div>
   </div>
+	<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="sebastianselling.com" tabindex="_blank">Design av Sebastian Selling</a></p>
 </section>
 <!-- ispect details Popup Text -->
 <div class="popup white" data-popup-id="ispect-details" id="ispect-details">
