--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -175,7 +175,7 @@
       </div>
     </div>
   </div>
-	<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="sebastianselling.com" tabindex="_blank">Design av Sebastian Selling</a></p>
+	<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="http://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
 </section>
 
 	<!-- CONTACT INFO POPOVER -->
