--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -144,7 +144,7 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
 	</section>
 <!-- Footer -->
-<section class="slide customFooter" style="background: #f2f9ff;color: #333;">
+<section class="slide customFooter">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
