--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -200,7 +200,7 @@
 		</div>
 	</section>
 <!-- Footer -->
-<section class="slide customFooter" style="background: #f2f9ff;color: #333;">
+<section class="slide customFooter">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
