--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -319,7 +319,7 @@
 	</section>
 
 <!-- Footer -->
-<section class="slide customFooter" style="background: #f2f9ff;color: #333;">
+<section class="slide customFooter">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
