removed .css file call from typeform

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1>Entreprenadbesiktning för nyproduktion och ROT</h1>
+								<h1>Entreprenadbesiktning för nyproduktion <br>och ROT</h1>
 								<p>
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
@@ -293,15 +293,6 @@
 													js.src = b + 'share.js';
 													q = gt.call(d, 'script')[0];
 													q.parentNode.insertBefore(js, q)
-												}
-												id = id + '_';
-												if (!gi.call(d, id)) {
-													qs = ce.call(d, 'link');
-													qs.rel = 'stylesheet';
-													qs.id = id;
-													qs.href = b + 'share-button.css';
-													s = gt.call(d, 'head')[0];
-													s.appendChild(qs, s)
 												}
 											})()
 										</script>
@@ -352,15 +343,6 @@
 											q = gt.call(d, 'script')[0];
 											q.parentNode.insertBefore(js, q)
 										}
-										id = id + '_';
-										if (!gi.call(d, id)) {
-											qs = ce.call(d, 'link');
-											qs.rel = 'stylesheet';
-											qs.id = id;
-											qs.href = b + 'share-button.css';
-											s = gt.call(d, 'head')[0];
-											s.appendChild(qs, s)
-										}
 									})()
 								</script>
 							</li>
@@ -410,15 +392,6 @@
 													q = gt.call(d, 'script')[0];
 													q.parentNode.insertBefore(js, q)
 												}
-												id = id + '_';
-												if (!gi.call(d, id)) {
-													qs = ce.call(d, 'link');
-													qs.rel = 'stylesheet';
-													qs.id = id;
-													qs.href = b + 'share-button.css';
-													s = gt.call(d, 'head')[0];
-													s.appendChild(qs, s)
-												}
 											})()
 										</script>
 									</li>
@@ -465,15 +438,6 @@
 											js.src = b + 'share.js';
 											q = gt.call(d, 'script')[0];
 											q.parentNode.insertBefore(js, q)
-										}
-										id = id + '_';
-										if (!gi.call(d, id)) {
-											qs = ce.call(d, 'link');
-											qs.rel = 'stylesheet';
-											qs.id = id;
-											qs.href = b + 'share-button.css';
-											s = gt.call(d, 'head')[0];
-											s.appendChild(qs, s)
 										}
 									})()
 								</script>
