--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -136,14 +136,14 @@
 					<!-- PR widget -->
 					<div class="fix-5-12 fromLeft" id="pr-widget">
 						<div class="pad lightgrey-border margin-bottom-5">
-							<h3 class="pad-header margin-0" style="padding-left: 20px;">
+							<h3 class="pad-header margin-0">
 								Presskontakt
 							</h3>
 							<div class="margin-left-2" style="margin-top: 15px;">
 								<p class="micro bold">Magnus Janson</p>
 								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@besiktningsman.se</p></a>
 								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
-								<a href="../assets/press/bm_press.zip"><p class="micro bold text-blue">Ladda ner presspaketet</p></a>
+								<a href="../assets/press/bm-press.zip" download="besiktningsman.se-press-paket.zip"><p class="micro bold text-blue">Logga samt foton</p></a>
 							</div>
 							<!-- no active PM links yet -->
 							<!-- <h3 class="pad-header margin-0" style="padding-left: 20px;">
@@ -153,8 +153,8 @@
 								<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">Länk PM1</p></a>
 								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
 							</div> -->
-							<h3 class="pad-header margin-0" style="padding-left: 20px;">
-								Nyhetsbrev
+							<h3 class="pad-header margin-0">
+								Nyhetsbrevet Byggintelligens
 							</h3>
 							<div class="margin-left-2">
 								<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
@@ -175,7 +175,7 @@
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
 							<p>
-								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
+								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15:e till 16:e september.
 							</p>
 							<div class="fromLeft left">
 								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
