google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 	  gtag('config', 'UA-11858478-1');
 	</script>
-
+	<!-- google site verification -->
+	<meta name="google-site-verification" content="uIsQeRnTuJtqD_rORyLb6GKgVNufjeEkczKMFszRIO4" />
 	<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
 	<script defer type="text/javascript">
 		window.cookieconsent_options = {
