--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -38,7 +38,8 @@
 
 	  gtag('config', 'UA-11858478-1');
 	</script>
-
+	<!-- google site verification -->
+	<meta name="google-site-verification" content="uIsQeRnTuJtqD_rORyLb6GKgVNufjeEkczKMFszRIO4" />
 
 </head>
 
