Header title style consistency

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -172,11 +172,20 @@
 					</h1>
 					<!-- newsflow list / latest first -->
 					<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
+						<div >
+							<h3>BRF Bergkristallen</h3>
+							<p>
 
+							</p>
+							<div class="fromLeft left">
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+							</div>
+						</div>
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
 							<p>
-								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15:e till 16:e september.
+								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15-16 september.
 							</p>
 							<div class="fromLeft left">
 								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
