--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -151,8 +151,8 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero" style="font-weight: 400;">Entreprenadbesiktning för <br>nyproduktion och ROT</h1>
-						<p class="hero small">
+						<h1 class="hero-title">Entreprenadbesiktning för <br>nyproduktion och ROT</h1>
+						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
 							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
 						</p>
