--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -173,13 +173,27 @@
 					<!-- newsflow list / latest first -->
 					<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
 						<div >
-							<h3>BRF Bergkristallen</h3>
+							<h3>Kv Ektorp, Nacka</h3>
 							<p>
-
+								ByggVesta planerar att uppföra 207 studentlägenheter i Ektorp, Nacka.
+								<br>
+								Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
 							</p>
 							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
-								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.jpg" alt="Modelrendering av Ektorp, Nacka.">
+								<p class="micro text-blueGrey center">Ektorp, Nacka</p>
+							</div>
+						</div>
+						<div >
+							<h3>BRF Bergkristallen, Falun</h3>
+							<p>
+								SHH Bostad planerar att bygga 34 bostäder i Falun.
+								<br>
+								Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
+							</p>
+							<div class="fromLeft left">
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.jpg" alt="Modelrendering av Bergkristallen i Falun.">
+								<p class="micro text-blueGrey center">Bergkristallen i Falun</p>
 							</div>
 						</div>
 						<div >
