Updated the service page titles, all bold for some reason

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -152,9 +152,9 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero" style="font-weight: 400;">Besiktningstjänster för bostadsrättsföreningar</h1>
-						<p class="hero small">
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster <br>vid nyproduktion, ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
+						<h1 class="hero-title">Besiktningstjänster för bostadsrättsföreningar</h1>
+						<p>
+							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid nyproduktion, <br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
 						</p>
 					</div>
 
