--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -166,9 +166,9 @@
 					</div>
 
 					<!-- newsflow title -->
-					<h1 class="fix-5-12 left fromRight" id="news-title" style="padding: 20px;">
+					<h1 class="fix-5-12 left fromRight margin-0" id="news-title">
 						Händelser
-						<div class="border-bottom-grey" style="margin: 0;"></div>
+						<div class="border-bottom-grey margin-0"></div>
 					</h1>
 					<!-- newsflow list / latest first -->
 					<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
@@ -199,7 +199,7 @@
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
 							<p>
-								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15-16 september.
+								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15 till 16 september.
 							</p>
 							<div class="fromLeft left">
 								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
